[package]
name = "bp3d-os"
version = "1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2018"
description = "Operating System tools designed for BlockProject3D"
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/tools.os"
readme = "./README.MD"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_vendor = "apple")'.dependencies]
objc = { version = "0.2.7", optional = true }
objc-foundation = { version = "0.1.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader"] }

[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android"))))'.dependencies]
zbus = { version = "3.7.0", optional = true }

# Target exclusively freebsd as libc is only needed due to un-needed amazing complexity on freebsd.
[target.'cfg(any(target_os = "freebsd", target_vendor = "apple"))'.dependencies]
libc = {version = "0.2", optional = true }

[features]
