[package]
name = "bp3d-os"
version = "1.0.0-rc.4.3.1"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Operating System tools designed for BlockProject3D"
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/tools.os"
readme = "../README.MD"
keywords = ["bp3d", "tools", "os"]
categories = ["os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Normal dependencies
time = { version = "0.3.37", optional = true }

# Apple and BSD
[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc = { version = "0.2.7", optional = true }
objc-foundation = { version = "0.1.1", optional = true }

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [], optional = true }

# All other unixes except Android and Apple systems
[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android"))))'.dependencies]
zbus = { version = "5.7.1", optional = true }

[target.'cfg(all(not(any(target_vendor = "apple", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd")), any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
raw-cpuid = { version = "11.0.1", optional = true }

[target.'cfg(unix)'.dependencies]
bp3d-util = { version = "2.2.0", features = [], optional = true }

[features]
dirs = ["objc", "objc-foundation", "windows-sys/Win32_UI_Shell", "windows-sys/Win32_Foundation", "windows-sys/Win32_System_Com"]
open = ["fs", "zbus", "windows-sys/Win32_UI_Shell", "windows-sys/Win32_Foundation", "windows-sys/Win32_UI_WindowsAndMessaging", "objc"]
fs = ["windows-sys/Win32_Storage_FileSystem", "windows-sys/Win32_Foundation"]
assets = ["libc", "objc", "objc-foundation", "windows-sys/Win32_System_LibraryLoader", "windows-sys/Win32_Foundation"]
cpu-info = ["raw-cpuid"]
time = ["time/std", "windows-sys/Win32_System_Time", "windows-sys/Win32_Foundation", "windows-sys/Win32_System_SystemServices", "bp3d-util/tzif", "libc"]
module = ["libc", "rustc_version", "bp3d-util/simple-error"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
rustc_version = { version = "0.4.1", optional = true }
