[package]
name = "test-mod"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
bp3d-os-build = { version = "1.0.0-rc.1.0.0", path = "../../build" }

[dev-dependencies]
bp3d-os = { version = "1.0.0-rc.4.3.1", path = "../../core", features = ["module"] }
