[package]
name = "test-mod"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
bp3d-os-build = { version = "1.1.0", path = "../../build" }

[dependencies]
bp3d-os = { version = "2.2.0", path = "../../core", features = ["module"] }
bp3d-debug = "1.0.0"
